# dance-analysis-workbench

./: .gitignore  CODEX.md  README.md  flake.nix  main.py  package.json  pyproject.toml
configs/: runtime_profiles.json
docs/: ingredients-and-experiments.md  package-management.md
openspec/changes/build-c-radiov4-dance-analysis-demo/: design.md  proposal.md  tasks.md
openspec/changes/build-c-radiov4-dance-analysis-demo/specs/dancer-isolation-pipeline/: spec.md
openspec/changes/build-c-radiov4-dance-analysis-demo/specs/interactive-dance-analysis-workbench/: spec.md
openspec/changes/build-c-radiov4-dance-analysis-demo/specs/motion-and-beat-scoring/: spec.md
scripts/: run_radio_headless.py
src/dance_analysis/: __init__.py  adapters.py  app.py  cli.py  config.py  contracts.py  pipeline.py
tests/: test_metrics.py  test_pipeline.py
