[project]
name = "dance-analysis-workbench"
version = "0.1.0"
description = "Interactive dance battle analysis workbench built around a C-RADIOv4-centered pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gradio>=5.22.0",
  "numpy>=2.2.0",
  "opencv-python-headless>=4.11.0.86",
  "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dance_analysis"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
